--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,37 +1,40 @@
+{% set name = "python-monkey-business" %}
 {% set version = "1.0.0" %}
-{% set sha256 = "2cb1820ff211e46f5a8a2f16c92c3e1d13ec528f3cf0c3afe1b6e895beb4e417" %}
+
 
 package:
-  name: python-monkey-business
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: python-monkey-business-{{ version }}.tar.gz
-  url: https://github.com/theatlantic/python-monkey-business/archive/v{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/python-monkey-business-{{ version }}.tar.gz
+  sha256: 9976522989766f00b2aaa24ec96eacb91a6de7b7001d1452079323b071988e0e
 
 build:
   number: 1003
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
-    - setuptools
-    - six >=1.7.0
-
+    - ez_setup
+    - pip
+    - python >=3.6
   run:
-    - python
-    - setuptools
+    - python >=3.6
     - six >=1.7.0
 
 test:
   imports:
     - monkeybiz
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://github.com/theatlantic/python-monkey-business
-  license: BSD 2-Clause
+  license: BSD-2-Clause
   license_file: LICENSE
   summary: 'Utility functions for monkey-patching python code'
   license_family: BSD
